@@ -16,9 +16,11 @@
 			<div class='ftitle-left'>
 				<?php echo $this->l('form_add'); ?> <?php echo $subject?>
 			</div>
+<?php 	if(!$this->unset_back_to_list) { ?>				
 			<div class='ftitle-right'>
 				<a href='<?php echo $list_url?>' onclick='javascript: return goToList()' ><?php echo $this->l('form_back_to_list'); ?></a>
 			</div>
+<?php 	} ?>			
 			<div class='clear'></div>
 		</div>
 		<div title="Minimize/Maximize Table" class="ptogtitle">
@@ -61,12 +63,14 @@
 			<div class='form-button-box'>
 				<input type='submit' value='<?php echo $this->l('form_save'); ?>'/>
 			</div>
+<?php 	if(!$this->unset_back_to_list) { ?>				
 			<div class='form-button-box'>
 				<input type='button' value='<?php echo $this->l('form_save_and_go_back'); ?>' id="save-and-go-back-button"/>
 			</div>					
 			<div class='form-button-box'>
 				<input type='button' value='<?php echo $this->l('form_cancel'); ?>' onclick="javascript: goToList()" />
 			</div>
+<?php 	} ?>						
 			<div class='form-button-box'>
 				<div class='small-loading' id='FormLoading'><?php echo $this->l('form_insert_loading'); ?></div>
 			</div>
